missed a spot for recycling navigation

--- a/room.html
+++ b/room.html
@@ -241,13 +241,13 @@
             }
 
             if (sodaCheck != '2') {
-                if (mouseX >= laundry.left && mouseX <= laundry.right && mouseY >= laundry.top && mouseY <= laundry.bottom) {
+                if (mouseX >= soda.left && mouseX <= soda.right && mouseY >= soda.top && mouseY <= soda.bottom) {
                     window.location.href = 'soda.html';
                 }
             }
 
             if (sodaCheck === '0') {
-                if (mouseX >= hamper.left && mouseX <= hamper.right && mouseY >= hamper.top && mouseY <= hamper.bottom) {
+                if (mouseX >= recyling.left && mouseX <= recyling.right && mouseY >= recyling.top && mouseY <= recyling.bottom) {
                     window.location.href = 'recycling.html';
                 }
             }
